<resources>
    <string name="app_name">KKU Food Random</string>
    <string name="action_settings">Settings</string>
    <string name="card_type_title">Type</string>
    <string name="card_zone_title">Zone</string>
    <string name="card_time_pick_title">Time</string>
    <string name="radio_button_time_now">Now</string>
    <string name="radio_button_time_pick">Specify Time</string>
    <string name="dialog_not_found_res">No restaurant found</string>
    <string name="hot_promo">Hot! Promotion</string>
    <string name="recommend_other">Recommend by others</string>
    <string name="near_by">Near by restuarant</string>
    <string name="btn_categories">Show by categories</string>
    <string name="more">More</string>
</resources>
