<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/card_dark_background"
            android:id="@+id/type_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="@dimen/nice_card_margin"
            android:layout_marginRight="@dimen/nice_card_margin"
            android:layout_marginTop="@dimen/nice_card_margin">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nice_inside_card_relative_margin"
                android:layout_marginLeft="@dimen/nice_inside_card_relative_margin"
                android:layout_marginRight="@dimen/nice_inside_card_relative_margin"
                android:layout_marginTop="@dimen/nice_inside_card_relative_margin_top">

                <com.leaderproject.doikum.thewaytoeat.customComponent.CustomBoldTextView
                    android:textColor="@color/cardview_light_background"
                    android:id="@+id/type_title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_type_title"
                    android:textSize="23dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:alpha="0.3"
                    android:id="@+id/type_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/ic_dinning" />

                <android.support.v7.widget.AppCompatSpinner
                    android:theme="@style/AppThemeDark"
                    android:layout_marginTop="@dimen/nice_card_margin"
                    android:id="@+id/type_spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/type_title"
                    android:layout_centerHorizontal="true"
                    android:descendantFocusability="beforeDescendants" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/card_dark_background"
            android:id="@+id/zone_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_card"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="@dimen/nice_card_margin"
            android:layout_marginRight="@dimen/nice_card_margin"
            android:layout_marginTop="@dimen/nice_card_margin">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nice_inside_card_relative_margin"
                android:layout_marginLeft="@dimen/nice_inside_card_relative_margin"
                android:layout_marginRight="@dimen/nice_inside_card_relative_margin"
                android:layout_marginTop="@dimen/nice_inside_card_relative_margin_top">

                <com.leaderproject.doikum.thewaytoeat.customComponent.CustomBoldTextView
                    android:textColor="@color/cardview_light_background"
                    android:id="@+id/zone_title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_zone_title"
                    android:textSize="23dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:id="@+id/zone_icon"
                    android:alpha="0.3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/ic_zone" />

                <android.support.v7.widget.AppCompatSpinner
                    android:theme="@style/AppThemeDark"
                    android:layout_marginTop="@dimen/nice_card_margin"
                    android:id="@+id/zone_spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/zone_title"
                    android:layout_centerHorizontal="true"
                    android:descendantFocusability="beforeDescendants" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/card_dark_background"
            android:id="@+id/time_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zone_card"
            android:layout_marginBottom="85dp"
            android:layout_marginLeft="@dimen/nice_card_margin"
            android:layout_marginRight="@dimen/nice_card_margin"
            android:layout_marginTop="@dimen/nice_card_margin"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nice_inside_card_relative_margin"
                android:layout_marginLeft="@dimen/nice_inside_card_relative_margin"
                android:layout_marginRight="@dimen/nice_inside_card_relative_margin"
                android:layout_marginTop="@dimen/nice_inside_card_relative_margin_top">

                <TextView
                    android:alpha="0.3"
                    android:id="@+id/time_preview"
                    android:textSize="35dp"
                    android:text="HH:MM:SS"
                    android:textColor="#e6c9c9"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.leaderproject.doikum.thewaytoeat.customComponent.CustomBoldTextView
                    android:id="@+id/time_title"
                    android:textColor="@color/cardview_light_background"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_time_pick_title"
                    android:textSize="23dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <RadioGroup
                    android:theme="@style/AppThemeDark"
                    android:id="@+id/time_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time_title"
                    android:layout_marginTop="@dimen/nice_card_margin">

                    <com.leaderproject.doikum.thewaytoeat.customComponent.CustomRadioButton
                        android:id="@+id/radio_button_time_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_button_time_now" />

                    <com.leaderproject.doikum.thewaytoeat.customComponent.CustomRadioButton
                        android:id="@+id/radio_button_time_pick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_button_time_pick" />

                </RadioGroup>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>